# NLP

./: .gitignore  404.html  README.md  __init__.html  index.html  mkdocs.yml  programa.html  pyproject.toml  sitemap.xml
__init__/: index.html
assessments/: proyecto_integrador.html
clases/: Unidad_1_Limpieza_Transformacion.html  Unidad_2_DFM.html  Unidad_3_Estadistica_Descriptiva.html  Unidad_4a_Keyness_Dispersion_Quanteda.html  Unidad_4b_Keyness_Interpretacion_LLM.html  Unidad_5a_Topic_Modeling_Quanteda.html  Unidad_5b_Consistencia_TM_LLM.html  Unidad_5c_Embeddings.html  Unidad_5d_Bertopic.html  Unidad_6_Analisis_Sentimiento.html  Unidad_7_Similitud_Semantica.html  clases.html  lda_topterms_k20.csv  terminos_tmod_12.html  terminos_tmod_25.html
datasets/: datasets.html
docs/: index.md  programa.md  unit1_limpieza_transformacion.ipynb  unit2_dfm.ipynb  unit3_estadistica_descriptiva.ipynb  unit4_keyness_dispersion.ipynb  unit5_topic_modeling.ipynb  unit6_analisis_sentimiento.ipynb  unit7_similitud_semantica.ipynb
exercises/: exercises.html
javascripts/: mathjax.js
notebooks/: 1_Limpieza_procesamiento.ipynb  2_Document Feature Matrix.ipynb  3_Estad_Descriptiva.ipynb  4_2_Keyness_Analisis_LLM_Python_HF.ipynb  5_1_Topic Modeling_Quanteda.ipynb
programa/: index.html
stylesheets/: extra.css
unit1_limpieza_transformacion/: index.html
unit2_dfm/: index.html
unit3_estadistica_descriptiva/: index.html
unit4_keyness_dispersion/: index.html
unit5_topic_modeling/: index.html
unit6_analisis_sentimiento/: index.html
unit7_similitud_semantica/: index.html
(+38 files in other folders)
