[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Procesamiento de Lenguaje Natural - Análisis Textual con R y Python"
authors = ["Fernando Díaz H. <fernando.diaz@usm.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^8.2.15"
mkdocs-jupyter = "^0.21.0"
